--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,9 +6,9 @@
 body{
     font-family: 'Roboto';
     background-color: #EAC926;
-   
   
 }
+
 .search-input{
     width: 320px;
     padding: 10px;
@@ -16,6 +16,7 @@ body{
 }
 .subtitulos{
     font-size: 24px;
+    color: #302c2b;
 }
 .precios{
     font-size: 18px;
@@ -125,10 +126,12 @@ section{
 
 /* Footer */
 footer{
+    background-color: #ebebeb;
     width: 100%;
     margin: auto;
 }
 .contenedor-footer{
+    
     margin-top: 10px;
     box-sizing: border-box;
 }
@@ -141,6 +144,10 @@ footer{
 }
 .contenedor-footer-iconos i{
     color: #1259c3; 
+}
+
+.contenedor-footer-hijo-copy {
+    font-size: 8px;
 }
 
 .detalleProducto{
@@ -198,9 +205,10 @@ footer{
     color: white;
     font-size: 16px;
     cursor: pointer;
+    transition: 1s all;
 }
 .boton-registro:hover{
-    background-color: #2366ec;
+    background-color: #0022AA;
 }
 
 /* Login */
@@ -240,6 +248,7 @@ footer{
     font-size: 16px;
     cursor: pointer;
     box-sizing: border-box;
+    transition: 1s all;
 }
 .boton-login:hover{
     background-color: #0022AA;
@@ -285,8 +294,15 @@ footer{
     color: #39b54a;
 }
 
+.section-ajustes{
+    margin-top: 10px;
+    margin-bottom: 20px;
+   
+   
+}
 
-@media (min-width: 361px) {
+
+@media (min-width: 376px) {
     .descrip{
         display: block;
     }
@@ -315,7 +331,17 @@ footer{
     }
     .header-top-compra{
         max-width: 350px;
+        transition: 1s all;
+
     }
+    .header-top-compra i {
+        color: #1259c3;
+        
+    }
+    .header-top-compra:hover  {
+        transform: scale(1.02);
+    }
+
     .header-bottom-bar{
         display : flex ;
         align-items: center;
@@ -326,6 +352,15 @@ footer{
         
         display: flex;
         justify-content: space-between;
+        
+
+    }
+    .lista1 li, .lista2 li{
+       transition: 1s all;
+    }
+    .lista2 li:hover , .lista1 li:hover{
+        transform: scale(1.08);
+    }
 
     }
      .header-bottom-bar ul li{
@@ -342,7 +377,7 @@ footer{
     }
 
 
-}
+
 @media (min-width: 1100px){
 
     .section-visita > .articulos,.section-ofertas > .articulos{
